WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266417
[IFC][Ruby] Fix imported/w3c/web-platform-tests/css/css-ruby/ruby-intra-level-whitespace-001.html
https://bugs.webkit.org/show_bug.cgi?id=266417
Summary
[IFC][Ruby] Fix imported/w3c/web-platform-tests/css/css-ruby/ruby-intra-level...
alan
Reported
2023-12-14 09:11:16 PST
ssia
Attachments
Patch
(2.27 KB, patch)
2023-12-14 09:17 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(10.59 KB, patch)
2023-12-15 08:38 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(10.02 KB, patch)
2023-12-15 08:42 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-12-14 09:17:51 PST
Created
attachment 469041
[details]
Patch
alan
Comment 2
2023-12-15 08:38:57 PST
Created
attachment 469065
[details]
Patch
alan
Comment 3
2023-12-15 08:42:35 PST
Created
attachment 469066
[details]
[fast-cq]Patch
EWS
Comment 4
2023-12-15 10:48:36 PST
Committed
272129@main
(93de6d37c114): <
https://commits.webkit.org/272129@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 469066
[details]
.
Radar WebKit Bug Importer
Comment 5
2023-12-15 10:49:16 PST
<
rdar://problem/119728564
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug