[IFC][Ruby] Fix imported/w3c/web-platform-tests/css/css-ruby/ruby-intra-level-whitespace-001.html https://bugs.webkit.org/show_bug.cgi?id=266417

Reviewed by Antti Koivisto.

1. Make sure ruby base with only collapsed whitespace content is not considered "contentful".
2. Empty ruby content (both base and annotation) should not generate an alignment content offset.
3. baseEndIndexAndAlignment.offset is already an accumulated offset.
4. (temporary) Annotation lines should be adjusted by the alignment offset (m_rubyAlignContentRightOffset)
5. Multiple bases may form a continuous content (normally there's a soft wrap opportunity between them) when separated by "please don't break here" characters (inlineContent.setMinimumRequiredWidth)

* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::processBidiContent):

Canonical link: https://commits.webkit.org/272129@main